--- a/Generate_dataset/test/体素化/体素模型数据预处理代码.ipynb
+++ b/Generate_dataset/test/体素化/体素模型数据预处理代码.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__体素模型数据预处理代码__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -9,39 +17,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数据初始维度： (20, 60, 16)\n",
-      "数据调整后维度： (60, 16, 20)\n",
+      "数据初始维度： (20, 50, 16)\n",
+      "数据调整后维度： (20, 50, 16)\n",
       "数据标准化后维度： (120, 120, 120)\n",
       "[[ 0  0  0]\n",
-      " [42 57 62]\n",
-      " [42 62 62]\n",
-      " [68 52 56]\n",
-      " [68 53 57]\n",
-      " [68 66 57]\n",
-      " [68 67 56]\n",
-      " [69 53 58]\n",
-      " [69 54 59]\n",
-      " [69 54 61]\n",
-      " [69 65 59]\n",
-      " [69 65 61]\n",
-      " [69 66 58]\n",
-      " [70 55 61]\n",
-      " [70 55 63]\n",
-      " [70 56 64]\n",
-      " [70 63 64]\n",
-      " [70 64 61]\n",
-      " [70 64 63]\n",
-      " [71 56 65]\n",
-      " [71 57 66]\n",
-      " [71 62 66]\n",
-      " [71 63 65]\n",
-      " [72 57 67]\n",
-      " [72 58 68]\n",
-      " [72 61 68]\n",
-      " [72 62 67]\n",
-      " [89 58 69]\n",
-      " [89 61 69]]\n",
-      "29\n"
+      " [56 78 59]\n",
+      " [56 78 60]\n",
+      " [63 45 58]\n",
+      " [63 45 61]]\n",
+      "5\n"
      ]
     }
    ],
@@ -52,12 +36,12 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "#数据读取与质量预处理\n",
-    "data = io.loadmat('../../Matlab_files/top3d_Model/top3d_Model_1/iter-100/iters-100-006/topModel_1_100_006.mat')\n",
+    "data = io.loadmat('../../Matlab_files/top3d_Model/top3d_Model_6/iters-200/iters-200-012/topModel_6_200_012.mat')\n",
     "data = data['data']\n",
     "data = np.array(data)\n",
     "print('数据初始维度：',data.shape)\n",
-    "data = data.transpose(1, 2, 0)\n",
-    "print('数据调整后维度：',data.shape)#(x,z,y)\n",
+    "# data = data.transpose(1, 2, 0)\n",
+    "print('数据调整后维度：',data.shape)            #(x,z,y)\n",
     "for i in range(data.shape[0]):\n",
     "    for j in range(data.shape[1]):\n",
     "        for k in range(data.shape[2]):\n",
@@ -87,7 +71,7 @@
     "#测试保存\n",
     "# io.savemat('C:/Users/11573/Desktop/data/standardinizetest.mat',{'standarddata':data_new})\n",
     "#正式保存\n",
-    "# io.savemat('../../Matlab_files/top3d_Model/top3d_Model_1/iter-100/iters-100-006/standardtopModel_1_100_006.mat',{'standarddata':data_new})\n",
+    "# io.savemat('../../Matlab_files/top3d_Model/top3d_Model_1/iter-100/iters-100-006/standardtopModel_1_100_006.mat',{'standardtest':data_new})\n",
     "\n",
     "#查找模型存在的单共享边等断裂结构\n",
     "defect_data = np.zeros((120, 120, 120))\n",
@@ -148,8 +132,8 @@
     "# Top3dSTL_v3('C:\\Users\\11573\\Desktop\\VSCode_repos\\Generate_dataset\\Matlab_files\\top3d_Model_1\\repairtopModel_1.STL',repairdata,'Format','binary','Mode','iso')\n",
     "#修复模型\n",
     "\n",
-    "# data_new[49][57][58] = 1\n",
-    "# data_new[49][62][58] = 1\n",
+    "# data_new[89][58][69] = 0\n",
+    "# data_new[89][61][69] = 0\n",
     "# data_new[55][58][62] = 1\n",
     "# data_new[55][61][62] = 1\n",
     "# data_new[56][56][60] = 1\n",
@@ -163,53 +147,7 @@
     "# data_new[63][53][65] = 1\n",
     "# data_new[63][66][65] = 1\n",
     "# data_new[71][56][57] = 1\n",
-    "# data_new[71][63][57] = 1\n",
-    "# data_new[58][55][60] = 1\n",
-    "# data_new[58][64][60] = 1\n",
-    "# data_new[59][55][59] = 1\n",
-    "# data_new[59][64][59] = 1\n",
-    "# data_new[59][54][59] = 1\n",
-    "# data_new[59][65][59] = 1\n",
-    "# data_new[59][53][58] = 1\n",
-    "# data_new[59][66][58] = 1\n",
-    "# data_new[59][55][68] = 1\n",
-    "# data_new[59][64][68] = 1\n",
-    "# data_new[61][55][66] = 1\n",
-    "# data_new[61][64][66] = 1\n",
-    "# data_new[63][54][66] = 1\n",
-    "\n",
-    "# data_new[62][54][58] = 1\n",
-    "# data_new[62][65][58] = 1\n",
-    "# data_new[62][53][58] = 1\n",
-    "# data_new[62][66][58] = 1\n",
-    "# data_new[62][54][56] = 1\n",
-    "# data_new[62][65][56] = 1\n",
-    "# data_new[62][55][55] = 1\n",
-    "# data_new[62][64][55] = 1\n",
-    "\n",
-    "# data_new[65][52][62] = 1\n",
-    "# data_new[65][67][63] = 1\n",
-    "# data_new[67][53][63] = 1\n",
-    "\n",
-    "# data_new[69][53][64] = 1\n",
-    "# data_new[69][65][64] = 1\n",
-    "# data_new[68][53][61] = 1\n",
-    "\n",
-    "\n",
-    "# data_new[70][56][57] = 1\n",
-    "# data_new[69][63][57] = 1\n",
-    "\n",
-    "# data_new[71][58][57] = 1\n",
-    "# data_new[71][61][57] = 1\n",
-    "# data_new[71][57][67] = 1\n",
-    "\n",
-    "# data_new[73][57][67] = 1\n",
-    "# data_new[73][62][67] = 1\n",
-    "\n",
-    "# data_new[76][60][66] = 1\n",
-    "\n",
-    "# data_new[81][60][63] = 1\n",
-    "# data_new[83][60][63] = 1\n",
+    "np.set_printoptions(threshold=np.inf)\n",
     "print(defect_index)\n",
     "print(len(defect_index))\n",
     "# print('遍历了：',n,'次')\n",
@@ -233,8 +171,8 @@
     "# io.savemat('C:/Users/11573/Desktop/data/defecttopModel.mat',{'defectdata':defect_data})\n",
     "\n",
     "# #正式保存\n",
-    "# io.savemat('../../Matlab_files/top3d_Model_7/iters-180/iters-180-004/defecttopModel_7_180_004.mat',{'defectdata':defect_data})\n",
-    "# io.savemat('../../Matlab_files/top3d_Model_7/iters-180/iters-180-004/repairtopModel_7_180_004.mat',{'repairdata':data_new})\n"
+    "# io.savemat('../../Matlab_files/top3d_Model/top3d_Model_6/iters-200/iters-200-012/defecttopModel_6_200_012.mat',{'defectdata':defect_data})\n",
+    "# io.savemat('../../Matlab_files/top3d_Model_1/iters-100/iters-100-006/repairtopModel_7_180_004.mat',{'repairdata':data_new})\n"
    ]
   },
   {
@@ -253,9 +191,9 @@
    "hash": "2326ec73caf7fe572f6fa4e654f9071b7e911538518bf77235289bf5fa1d4957"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.16 ('pytorch_cpu')",
+   "display_name": "pytorch_cpu",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch_cpu"
   },
   "language_info": {
    "codemirror_mode": {
