--- a/Generate_dataset/test/体素化/体素模型数据预处理代码.ipynb
+++ b/Generate_dataset/test/体素化/体素模型数据预处理代码.ipynb
@@ -40,7 +40,7 @@
     "data = data['data']\n",
     "data = np.array(data)\n",
     "print('数据初始维度：',data.shape)\n",
-    "# data = data.transpose(1, 2, 0)\n",
+    "data = data.transpose(1, 2, 0)\n",
     "print('数据调整后维度：',data.shape)            #(x,z,y)\n",
     "for i in range(data.shape[0]):\n",
     "    for j in range(data.shape[1]):\n",
