--- a/Generate_dataset/test/体素化/数据集切割代码.ipynb
+++ b/Generate_dataset/test/体素化/数据集切割代码.ipynb
@@ -88,6 +88,7 @@
     "    data = np.pad(data, (((nelx - data.shape[0])//2, (nelx - data.shape[0])//2),\n",
     "                    ((nely - data.shape[1])//2, (nely - data.shape[1])//2),\n",
     "                    ((nelz - data.shape[2])//2, (nelx - data.shape[2])//2)))\n",
+    "    io.save('')\n",
     "    tempdata = np.zeros((20, 20, 20))\n",
     "    for k in range(0, data.shape[2], 20):               #沿y轴切割\n",
     "        for j in range(0, data.shape[1], 20):           #沿z轴切割\n",
@@ -179,68 +180,6 @@
     "    print('*'*30)\n",
     "    data_index = os.path.join('../../Matlab_files/dataset/originalmatdata/dataset/input/',str(t)+'/')\n",
     "    nozerosdetect(data_index)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "data = np.load('../../Matlab_files/dataset/originalmatdata/dataset/input/42/detectmatrix.npy')\n",
-    "print(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "data = np.load('../../Matlab_files/dataset/originalmatdata/dataset/input/42/8949.npy')\n",
-    "print(data)\n",
-    "print(np.all(data==0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.io as io\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "data = io.loadmat('../../Matlab_files/dataset/originalmatdata/dataset/input/2/detectmatrix.npy')\n",
-    "data = data['standarddata']\n",
-    "mycolormap = plt.get_cmap('winter')\n",
-    "data_max = data.max()\n",
-    "relativevalue = np.round(data / data_max, 1)\n",
-    "colorsvalues = mycolormap(relativevalue)\n",
-    "fig = plt.figure(figsize=(10, 10))\n",
-    "ax = fig.add_subplot(projection='3d')\n",
-    "ax.set_xlabel('X Axis')\n",
-    "ax.set_ylabel('Y Axis')\n",
-    "ax.set_zlabel('Z Axis')\n",
-    "ax.set_xlim(0, 150)\n",
-    "ax.set_ylim(0, 150)\n",
-    "ax.set_zlim(75, -75)\n",
-    "ax.voxels(data, facecolors=colorsvalues,edgecolors = 'k', shade = False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "image = cv2.imread('../../../camvid/camvid/labels/0001TP_006690_P.png')\n"
    ]
   },
   {
