--- a/Generate_dataset/test/体素化/体素模型数据预处理代码.ipynb
+++ b/Generate_dataset/test/体素化/体素模型数据预处理代码.ipynb
@@ -10,22 +10,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数据初始维度： (20, 50, 16)\n",
-      "数据调整后维度： (20, 50, 16)\n",
+      "数据初始维度： (20, 60, 16)\n",
+      "数据调整后维度： (20, 60, 16)\n",
       "数据标准化后维度： (120, 120, 120)\n",
       "[[ 0  0  0]\n",
-      " [56 78 59]\n",
-      " [56 78 60]\n",
-      " [63 45 58]\n",
-      " [63 45 61]]\n",
-      "5\n"
+      " [56 61 55]\n",
+      " [56 61 64]\n",
+      " [60 70 54]\n",
+      " [60 70 65]\n",
+      " [61 65 53]\n",
+      " [61 65 66]\n",
+      " [69 30 54]\n",
+      " [69 30 65]\n",
+      " [69 57 55]\n",
+      " [69 57 64]]\n",
+      "11\n"
      ]
     }
    ],
@@ -36,7 +42,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "#数据读取与质量预处理\n",
-    "data = io.loadmat('../../Matlab_files/top3d_Model/top3d_Model_6/iters-200/iters-200-012/topModel_6_200_012.mat')\n",
+    "data = io.loadmat('../../Matlab_files/top3d_Model/top3d_Model_7/iters-200/iters-200-008/topModel_7_200_008.mat')\n",
     "data = data['data']\n",
     "data = np.array(data)\n",
     "print('数据初始维度：',data.shape)\n",
@@ -132,46 +138,112 @@
     "# Top3dSTL_v3('C:\\Users\\11573\\Desktop\\VSCode_repos\\Generate_dataset\\Matlab_files\\top3d_Model_1\\repairtopModel_1.STL',repairdata,'Format','binary','Mode','iso')\n",
     "#修复模型\n",
     "\n",
-    "# data_new[89][58][69] = 0\n",
-    "# data_new[89][61][69] = 0\n",
-    "# data_new[55][58][62] = 1\n",
-    "# data_new[55][61][62] = 1\n",
-    "# data_new[56][56][60] = 1\n",
-    "# data_new[56][63][60] = 1\n",
-    "# data_new[58][54][58] = 1\n",
-    "# data_new[58][65][58] = 1\n",
-    "# data_new[62][55][56] = 0\n",
-    "# data_new[62][64][56] = 0\n",
-    "# data_new[64][58][56] = 1\n",
-    "# data_new[64][61][56] = 1\n",
-    "# data_new[63][53][65] = 1\n",
-    "# data_new[63][66][65] = 1\n",
-    "# data_new[71][56][57] = 1\n",
+    "# defect_data[69][30][63] = 0\n",
+    "# defect_data[69][30][64] = 0\n",
+    "# defect_data[69][30][65] = 0\n",
+    "# defect_data[69][31][63] = 0\n",
+    "# defect_data[69][31][64] = 0\n",
+    "# defect_data[69][30][54] = 0\n",
+    "# defect_data[69][30][55] = 0\n",
+    "# defect_data[69][31][55] = 0\n",
+    "# defect_data[67][89][59] = 0\n",
+    "# defect_data[67][89][60] = 0\n",
+    "# defect_data[68][88][59] = 0\n",
+    "# defect_data[68][88][60] = 0\n",
+    "# defect_data[68][89][59] = 0\n",
+    "# defect_data[68][89][60] = 0\n",
+    "\n",
+    "# defect_data[69][87][59] = 0\n",
+    "# defect_data[69][87][60] = 0\n",
+    "# defect_data[69][88][59] = 0\n",
+    "# defect_data[69][88][60] = 0\n",
+    "# defect_data[69][89][59] = 0\n",
+    "# defect_data[69][89][60] = 0\n",
+    "# defect_data[69][30][55] = 0\n",
+    "# defect_data[69][31][55] = 0\n",
+    "# defect_data[67][89][59] = 0\n",
+    "# defect_data[67][89][60] = 0\n",
+    "# defect_data[68][88][59] = 0\n",
+    "# defect_data[68][88][60] = 0\n",
+    "# defect_data[68][89][59] = 0\n",
+    "# defect_data[68][89][60] = 0\n",
+    "# defect_data[69][87][59] = 0\n",
+    "# defect_data[69][87][60] = 0\n",
+    "# defect_data[69][88][59] = 0\n",
+    "# defect_data[69][88][60] = 0\n",
+    "# defect_data[69][89][59] = 0\n",
+    "# defect_data[69][89][60] = 0\n",
+    "# defect_data[55][61][62] = 0\n",
+    "# defect_data[55][62][62] = 0\n",
+    "# defect_data[67][89][59] = 0\n",
+    "# defect_data[67][89][60] = 0\n",
+    "# defect_data[68][88][59] = 0\n",
+    "# defect_data[68][88][60] = 0\n",
+    "# defect_data[68][89][59] = 0\n",
+    "# defect_data[68][89][60] = 0\n",
+    "# defect_data[69][87][59] = 0\n",
+    "# defect_data[69][87][60] = 0\n",
+    "# defect_data[69][88][59] = 0\n",
+    "# defect_data[69][88][60] = 0\n",
+    "# defect_data[69][89][59] = 0\n",
+    "# defect_data[69][89][60] = 0\n",
+    "# defect_data[69][89][61] = 0\n",
+    "# defect_data[57][78][57] = 0\n",
+    "# defect_data[57][79][57] = 0\n",
+    "# defect_data[63][45][56] = 0\n",
+    "# defect_data[63][46][56] = 0\n",
+    "# defect_data[64][45][56] = 0\n",
+    "# defect_data[64][44][56] = 0\n",
+    "# defect_data[65][43][58] = 0\n",
+    "# defect_data[65][43][59] = 0\n",
+    "# defect_data[65][43][60] = 0\n",
+    "# defect_data[65][43][61] = 0\n",
+    "\n",
+    "# defect_data[60][51][53] = 0\n",
+    "# defect_data[61][51][53] = 0\n",
+    "# defect_data[61][50][53] = 0\n",
+    "# defect_data[62][50][53] = 0\n",
+    "# defect_data[62][49][53] = 0\n",
+    "# defect_data[62][48][53] = 0\n",
+    "# defect_data[67][47][62] = 0\n",
+    "# defect_data[68][47][62] = 0\n",
+    "# defect_data[58][48][62] = 0\n",
+    "# defect_data[59][48][62] = 0\n",
+    "# defect_data[65][45][64] = 0\n",
+    "# defect_data[57][47][62] = 0\n",
+    "# defect_data[58][47][62] = 0\n",
+    "# defect_data[57][48][60] = 0\n",
+    "# defect_data[58][50][59] = 0\n",
+    "# defect_data[58][50][60] = 0\n",
+    "# defect_data[59][50][59] = 0\n",
+    "# defect_data[59][50][60] = 0\n",
+    "# defect_data[60][50][59] = 0\n",
+    "# defect_data[60][50][60] = 0\n",
+    "# defect_data[65][43][54] = 0\n",
+    "# defect_data[65][43][55] = 0\n",
+    "# defect_data[65][43][64] = 0\n",
+    "# defect_data[65][43][65] = 0\n",
+    "# defect_data[66][43][54] = 0\n",
+    "# defect_data[66][43][55] = 0\n",
+    "# defect_data[66][43][64] = 0\n",
+    "# defect_data[66][43][65] = 0\n",
+    "\n",
     "np.set_printoptions(threshold=np.inf)\n",
     "print(defect_index)\n",
     "print(len(defect_index))\n",
-    "# print('遍历了：',n,'次')\n",
-    "# print('共有',t,'个非零元素')\n",
-    "# print('共有',l,'个缺陷点')\n",
-    "# print('search_list:',search_list)\n",
-    "# print('search_list.shape:',search_list.shape)\n",
+    "for n in range(defect_data.shape[0]):\n",
+    "    for m in range(defect_data.shape[1]):\n",
+    "        for v in range(defect_data.shape[2]):\n",
+    "            if defect_data[n][m][v] != 0:\n",
+    "                defect_data[n][m][v] = 1\n",
     "\n",
-    "\n",
-    "# # #针对模型缺陷部分进行插补\n",
-    "# for o in range(1,len(search_list)):970\n",
-    "#     repair_index = search_list[o]\n",
-    "#     for w in range(6):\n",
-    "#         point_index = repair_index[w]\n",
-    "#         index_x = int(point_index[0])\n",
-    "#         index_z = int(point_index[1])\n",
-    "#         index_y = int(point_index[2])\n",
-    "#         data_new[index_x, index_z, index_y] = 1\n",
     "\n",
     "#测试保存\n",
     "# io.savemat('C:/Users/11573/Desktop/data/defecttopModel.mat',{'defectdata':defect_data})\n",
     "\n",
     "# #正式保存\n",
-    "# io.savemat('../../Matlab_files/top3d_Model/top3d_Model_6/iters-200/iters-200-012/defecttopModel_6_200_012.mat',{'defectdata':defect_data})\n",
+    "io.savemat('../../Matlab_files/top3d_Model/top3d_Model_7/iters-200/iters-200-008/defecttopModel_7_200_008.mat',{'defectdata':defect_data})\n",
+    "# io.savemat('./testdata.mat',{'defectdata':defect_data})\n",
     "# io.savemat('../../Matlab_files/top3d_Model_1/iters-100/iters-100-006/repairtopModel_7_180_004.mat',{'repairdata':data_new})\n"
    ]
   },
