--- a/Generate_dataset/test/体素化/体素模型修复代码（2023.02.22）.ipynb
+++ b/Generate_dataset/test/体素化/体素模型修复代码（2023.02.22）.ipynb
@@ -242,7 +242,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python pytorch_cpu",
+   "display_name": "pytorch_cpu",
    "language": "python",
    "name": "pytorch_cpu"
   },
