--- a/NeuralNet_test/###TOPO_Post_Processing###/###3dunet###/train/train_04_11.ipynb
+++ b/NeuralNet_test/###TOPO_Post_Processing###/###3dunet###/train/train_04_11.ipynb
@@ -357,49 +357,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import glob\n",
-    "# import numpy as np\n",
-    "# import torch\n",
-    "# import os\n",
+    "import glob\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import os\n",
     "\n",
     "\n",
     "\n",
-    "# if __name__ == \"__main__\":\n",
-    "#     # 选择设备，有cuda用cuda，没有就用cpu\n",
-    "#     device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "#     # 加载网络，图片单通道，分类为1。\n",
-    "#     net = UNet3D(1, 1)\n",
-    "#     # 将网络拷贝到deivce中\n",
-    "#     net.to(device=device)\n",
-    "#     # 加载模型参数\n",
-    "#     net.load_state_dict(torch.load('best_model.pth', map_location=device))\n",
-    "#     # 测试模式\n",
-    "#     net.eval()\n",
-    "#     t = 50\n",
-    "#     # 保存结果地址\n",
-    "#     save_res_path = os.path.join('./dataset/test/'+('%d_res.png'%(t)))\n",
-    "#     # 转为batch为1，通道为1，大小为512*512的数组\n",
-    "#     data = np.load('./dataset/test/topomodel_50.npy')\n",
-    "#     data = data.reshape(1, 1, data.shape[0], data.shape[1], data.shape[2])\n",
-    "#     # 转为tensor\n",
-    "#     data_tensor = torch.from_numpy(data)\n",
-    "#     # 将tensor拷贝到device中，只用cpu就是拷贝到cpu中，用cuda就是拷贝到cuda中。\n",
-    "#     data_tensor = data_tensor.to(device=device, dtype=torch.float32)\n",
-    "#     # 预测\n",
-    "#     pred = net(data_tensor)\n",
-    "#     # 提取结果\n",
-    "#     pred = np.array(pred.data.cpu()[0])[0]\n",
-    "#     print(pred)\n",
-    "#     # # 处理结果\n",
-    "#     # for i in range(pred.shape[0]):\n",
-    "#     #     for j in range(pred.shape[1]):\n",
-    "#     #         for k in range(pred.shape[2]):\n",
-    "#     #             if pred[i][j][k] > 0.5:\n",
-    "#     #                 pred[i][j][k] = 1\n",
-    "#     #             else:\n",
-    "#     #                 pred[i][j][k] = 0\n",
-    "#     # 保存图片\n",
-    "#     np.save('./dataset/test/',pred)"
+    "if __name__ == \"__main__\":\n",
+    "    # 选择设备，有cuda用cuda，没有就用cpu\n",
+    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "    # 加载网络，图片单通道，分类为1。\n",
+    "    net = UNet3D(1, 1)\n",
+    "    # 将网络拷贝到deivce中\n",
+    "    net.to(device=device)\n",
+    "    # 加载模型参数\n",
+    "    net.load_state_dict(torch.load('best_model.pth', map_location=device))\n",
+    "    # 测试模式\n",
+    "    net.eval()\n",
+    "    t = 50\n",
+    "    # 保存结果地址\n",
+    "    save_res_path = os.path.join('./dataset/test/'+('%d_res.png'%(t)))\n",
+    "    # 转为batch为1，通道为1，大小为512*512的数组\n",
+    "    data = np.load('./dataset/test/topomodel_50.npy')\n",
+    "    data = data.reshape(1, 1, data.shape[0], data.shape[1], data.shape[2])\n",
+    "    # 转为tensor\n",
+    "    data_tensor = torch.from_numpy(data)\n",
+    "    # 将tensor拷贝到device中，只用cpu就是拷贝到cpu中，用cuda就是拷贝到cuda中。\n",
+    "    data_tensor = data_tensor.to(device=device, dtype=torch.float32)\n",
+    "    # 预测\n",
+    "    pred = net(data_tensor)\n",
+    "    # 提取结果\n",
+    "    pred = np.array(pred.data.cpu()[0])[0]\n",
+    "    print(pred)\n",
+    "    # # 处理结果\n",
+    "    # for i in range(pred.shape[0]):\n",
+    "    #     for j in range(pred.shape[1]):\n",
+    "    #         for k in range(pred.shape[2]):\n",
+    "    #             if pred[i][j][k] > 0.5:\n",
+    "    #                 pred[i][j][k] = 1\n",
+    "    #             else:\n",
+    "    #                 pred[i][j][k] = 0\n",
+    "    # 保存图片\n",
+    "    np.save('./dataset/test/',pred)"
    ]
   }
  ],
