--- a/Generate_dataset/Jupyter_Code/体素模型数据预处理代码.ipynb
+++ b/Generate_dataset/Jupyter_Code/体素模型数据预处理代码.ipynb
@@ -153,80 +153,6 @@
     "# defect_data[68][89][59] = 0\n",
     "# defect_data[68][89][60] = 0\n",
     "\n",
-    "# defect_data[69][87][59] = 0\n",
-    "# defect_data[69][87][60] = 0\n",
-    "# defect_data[69][88][59] = 0\n",
-    "# defect_data[69][88][60] = 0\n",
-    "# defect_data[69][89][59] = 0\n",
-    "# defect_data[69][89][60] = 0\n",
-    "# defect_data[69][30][55] = 0\n",
-    "# defect_data[69][31][55] = 0\n",
-    "# defect_data[67][89][59] = 0\n",
-    "# defect_data[67][89][60] = 0\n",
-    "# defect_data[68][88][59] = 0\n",
-    "# defect_data[68][88][60] = 0\n",
-    "# defect_data[68][89][59] = 0\n",
-    "# defect_data[68][89][60] = 0\n",
-    "# defect_data[69][87][59] = 0\n",
-    "# defect_data[69][87][60] = 0\n",
-    "# defect_data[69][88][59] = 0\n",
-    "# defect_data[69][88][60] = 0\n",
-    "# defect_data[69][89][59] = 0\n",
-    "# defect_data[69][89][60] = 0\n",
-    "# defect_data[55][61][62] = 0\n",
-    "# defect_data[55][62][62] = 0\n",
-    "# defect_data[67][89][59] = 0\n",
-    "# defect_data[67][89][60] = 0\n",
-    "# defect_data[68][88][59] = 0\n",
-    "# defect_data[68][88][60] = 0\n",
-    "# defect_data[68][89][59] = 0\n",
-    "# defect_data[68][89][60] = 0\n",
-    "# defect_data[69][87][59] = 0\n",
-    "# defect_data[69][87][60] = 0\n",
-    "# defect_data[69][88][59] = 0\n",
-    "# defect_data[69][88][60] = 0\n",
-    "# defect_data[69][89][59] = 0\n",
-    "# defect_data[69][89][60] = 0\n",
-    "# defect_data[69][89][61] = 0\n",
-    "# defect_data[57][78][57] = 0\n",
-    "# defect_data[57][79][57] = 0\n",
-    "# defect_data[63][45][56] = 0\n",
-    "# defect_data[63][46][56] = 0\n",
-    "# defect_data[64][45][56] = 0\n",
-    "# defect_data[64][44][56] = 0\n",
-    "# defect_data[65][43][58] = 0\n",
-    "# defect_data[65][43][59] = 0\n",
-    "# defect_data[65][43][60] = 0\n",
-    "# defect_data[65][43][61] = 0\n",
-    "\n",
-    "# defect_data[60][51][53] = 0\n",
-    "# defect_data[61][51][53] = 0\n",
-    "# defect_data[61][50][53] = 0\n",
-    "# defect_data[62][50][53] = 0\n",
-    "# defect_data[62][49][53] = 0\n",
-    "# defect_data[62][48][53] = 0\n",
-    "# defect_data[67][47][62] = 0\n",
-    "# defect_data[68][47][62] = 0\n",
-    "# defect_data[58][48][62] = 0\n",
-    "# defect_data[59][48][62] = 0\n",
-    "# defect_data[65][45][64] = 0\n",
-    "# defect_data[57][47][62] = 0\n",
-    "# defect_data[58][47][62] = 0\n",
-    "# defect_data[57][48][60] = 0\n",
-    "# defect_data[58][50][59] = 0\n",
-    "# defect_data[58][50][60] = 0\n",
-    "# defect_data[59][50][59] = 0\n",
-    "# defect_data[59][50][60] = 0\n",
-    "# defect_data[60][50][59] = 0\n",
-    "# defect_data[60][50][60] = 0\n",
-    "# defect_data[65][43][54] = 0\n",
-    "# defect_data[65][43][55] = 0\n",
-    "# defect_data[65][43][64] = 0\n",
-    "# defect_data[65][43][65] = 0\n",
-    "# defect_data[66][43][54] = 0\n",
-    "# defect_data[66][43][55] = 0\n",
-    "# defect_data[66][43][64] = 0\n",
-    "# defect_data[66][43][65] = 0\n",
     "\n",
     "np.set_printoptions(threshold=np.inf)\n",
     "print(defect_index)\n",
@@ -249,12 +175,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Expected input batch_size (1) to match target batch_size (2).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m predict \u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mTensor([[\u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m1\u001b[39m]])\n\u001b[0;32m      6\u001b[0m label \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mTensor([\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m])\n\u001b[1;32m----> 7\u001b[0m nllloss(predict, label)\n",
+      "File \u001b[1;32mc:\\Users\\WZY\\.conda\\envs\\pytorch_cpu\\lib\\site-packages\\torch\\nn\\modules\\module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[1;32mc:\\Users\\WZY\\.conda\\envs\\pytorch_cpu\\lib\\site-packages\\torch\\nn\\modules\\loss.py:216\u001b[0m, in \u001b[0;36mNLLLoss.forward\u001b[1;34m(self, input, target)\u001b[0m\n\u001b[0;32m    215\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor, target: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[1;32m--> 216\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mnll_loss(\u001b[39minput\u001b[39;49m, target, weight\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, ignore_index\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mignore_index, reduction\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mreduction)\n",
+      "File \u001b[1;32mc:\\Users\\WZY\\.conda\\envs\\pytorch_cpu\\lib\\site-packages\\torch\\nn\\functional.py:2704\u001b[0m, in \u001b[0;36mnll_loss\u001b[1;34m(input, target, weight, size_average, ignore_index, reduce, reduction)\u001b[0m\n\u001b[0;32m   2702\u001b[0m \u001b[39mif\u001b[39;00m size_average \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mor\u001b[39;00m reduce \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m   2703\u001b[0m     reduction \u001b[39m=\u001b[39m _Reduction\u001b[39m.\u001b[39mlegacy_get_string(size_average, reduce)\n\u001b[1;32m-> 2704\u001b[0m \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39;49m_C\u001b[39m.\u001b[39;49m_nn\u001b[39m.\u001b[39;49mnll_loss_nd(\u001b[39minput\u001b[39;49m, target, weight, _Reduction\u001b[39m.\u001b[39;49mget_enum(reduction), ignore_index)\n",
+      "\u001b[1;31mValueError\u001b[0m: Expected input batch_size (1) to match target batch_size (2)."
+     ]
+    }
+   ],
    "source": [
-    "import scipy.io\n",
-    "import matplotlib.pyplot as plt"
+    "import torch\n",
+    "from torch import nn\n",
+    "\n",
+    "nllloss = nn.NLLLoss()\n",
+    "predict =torch.Tensor([[2, 3, 1]])\n",
+    "label = torch.Tensor([1])\n",
+    "nllloss(predict, label)\n"
    ]
   }
  ],
